Missing lecture information has been updated based on school schedule data. Added the ability to dynamically retrieve building floor and classroom information.